# Math-QnA-Generation-Pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/csvfile/: starting_example.csv
src/: config.py  pipeline.py
src/generator/: qna_generator.py
src/utils/: gemini_api.py  gemini_api_utils.py  pdf_to_image_splitter.py
